# textcoder

./: .gitignore  LICENSE.md  README.md  pyproject.toml
biject/compres1/src/arib62/: arib62.cpp  unarib62.cpp
biject/compres1/src/bit_bij/: arb2.cpp  arb256.cpp  bit_byte.cpp  bit_byte.h  bit_bytn.cpp  bit_bytn.h  bit_bytx.cpp  bit_bytx.h  byte2str.cpp  read.1st  str2byte.cpp  unarb2.cpp  unarb256.cpp
biject/compres1/src/bit_bij1/: README.255  arb255.cpp  unarb255.cpp
biject/compres1/web/: MORE BIJECTIVE ADAPTIVE ARITHMETIC COMPRESSION.html
biject/compres10/src/arib/: README.TXT  ZEROS.BAT  arib.cpp  arib32.cpp  unarib.cpp  unarib32.cpp
biject/compres10/web/: BIJECTIVE ADAPTIVE ARITHMETIC COMPRESSION.html
biject/compres11/src/a012b01/: README.TXT  a012b01.cpp  b012a01.cpp  bit_byts.h
biject/compres11/src/arb2x/: README.TXT  arb2x.cpp  bit_byts.cpp  unarb2x.cpp
biject/compres11/web/: BEST TWO SYMBOL BIJECTIVE ADAPTIVE ARITHMETIC COMPRESSION.html
biject/compres12/src/arb255/: arb255.cpp  bit_byts.h  unarb255.cpp
biject/compres12/src/arb3w/: README.TXT  W111.TXT  W122.TXT  W123855.TXT  arb3w.cpp  bit_byts.cpp  bit_byts.h  file.ABC  file.in  unarb3w.cpp
biject/compres12/web/: BEST TWO SYMBOL BIJECTIVE ADAPTIVE ARITHMETIC COMPRESSION.html
mtimmerm/biacode/src/: README.TXT  arithmetic.cpp  arithmetic.h  biacode.cpp  biacode.dsp  biacode.dsw  biacode.sln  biacode.vcxproj  biacode.vcxproj.filters  foio.cpp  foio.h  simplemodel.cpp  simplemodel.h  test.bat  test4
mtimmerm/biacode/src/python/: arithmetic_encoder.py  simple_model.py
mtimmerm/biacode/web/: index.html
mtimmerm/bicom101/src/: README.TXT
mtimmerm/bicom101/src/bialib/: arithmetic.cpp  arithmetic.h  bialib.dsp  bialib.vcxproj  bialib.vcxproj.filters  exclude.cpp  exclude.h  mtstream.cpp  mtstream.h  rijndael.cpp  rijndael.h  simplemodel.cpp  simplemodel.h  sufftree.cpp  sufftree.h  trivial.cpp  trivial.h
mtimmerm/bicom101/web/: index.html
notebooks/: arithmetic-coding-finite-precision.ipynb  arithmetic-coding-inline-rescale.ipynb  arithmetic-coding.ipynb
src/textcoder/: __main__.py  arithmetic_decoder.py  arithmetic_encoder.py  cli.py  coding.py  crypto.py  foio.py  llm_model.py  model.py  textcoder.py
(+16 files in other folders)
