[tool.poetry]
name = "textcoder"
version = "0.1.0"
description = ""
authors = ["Shawn Zivontsis <shawnz@shawnz.org>"]
readme = "README.md"
packages = [{ include = "textcoder", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.47.1"
torch = "^2.5.1"
accelerate = "^1.2.1"
cryptography = "^44.0.0"

[tool.poetry.scripts]
textcoder = "textcoder.cli:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.3"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
