[project]
name = "textcoder"
version = "0.1.0"
description = "Steganographic message encoder using LLMs"
authors = [{ name = "Shawn Zivontsis", email = "shawnz@shawnz.org" }]
readme = "README.md"
license-files = ["LICENSE.md"]
requires-python = ">=3.10"
dependencies = [
    "transformers (>=4.48.3,<5.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "accelerate (>=1.3.0,<2.0.0)",
    "cryptography (>=44.0.0,<45.0.0)",
]

[project.scripts]
textcoder = "textcoder.cli:main"

[tool.poetry]
packages = [{ include = "textcoder", from = "src" }]

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.5"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
